--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -7,3 +7,11 @@ Maintainer: Who to complain to <yourfault@somewhere.net>
 Description: More about what it does (maybe more than one line)
 License:
 LazyData: TRUE
+RoxygenNote: 5.0.1
+Imports:
+dplyr,
+org.Mm.eg.db,
+EnsDb.Mmusculus.v75,
+org.Hs.eg.db,
+EnsDb.Hsapiens.v75,
+limma
