--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,7 @@ export(EnsemblAnnotate)
 export(GeneAnnotate)
 export(PerGroupAvg)
 export(checkpData)
+export(runTopGO)
 import(EnsDb.Hsapiens.v75)
 import(EnsDb.Mmusculus.v75)
 import(dplyr)
@@ -13,3 +14,4 @@ import(genefilter)
 import(org.Hs.eg.db)
 import(org.Mm.eg.db)
 import(tidyr)
+import(topGO)
