Properly exported GetMainProbes

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,6 +7,7 @@ export(GeneAnnotate)
 export(PerGroupAvg)
 export(checkpData)
 export(runTopGO)
+export(GetMainProbes)
 import(EnsDb.Hsapiens.v75)
 import(EnsDb.Mmusculus.v75)
 import(dplyr)
