--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,17 +2,18 @@
 
 export(BackgrdFilter)
 export(Cleanup)
+export(Cleanup2)
 export(EnsemblAnnotate)
 export(GeneAnnotate)
 export(PerGroupAvg)
 export(checkpData)
 export(runTopGO)
-export(GetMainProbes)
 import(EnsDb.Hsapiens.v75)
 import(EnsDb.Mmusculus.v75)
 import(dplyr)
 import(genefilter)
 import(org.Hs.eg.db)
 import(org.Mm.eg.db)
+import(org.Rn.eg.db)
 import(tidyr)
 import(topGO)
